CSS/style.css
body{
    height:100%;
    width: 100%;
    font-family: arial;
    font-size: 15px;
    background-color: lightgray;
    margin: 0px 0px 0px 0px;
}

input[type="text"]{
    border-color: rgb(96,214,110);
    border-width: thin;
    font-family: arial;
    font-size: 20px;
    margin: auto;
}
input[type="password"]{
    border-color: rgb(96,214,110);
    border-width: thin;
    font-family: arial;
    font-size: 20px;
    margin: auto;
}
.header{
    width:100%;
    height:50px;
    background-color:#61d66f;
    display:inline-block;
}
.box{
    width: 480px;
    background-color:#AFEBB6;
    margin-top: 100px;
    margin-left: 5%;
    margin-right: 5%;
    display: inline;
    float: left;
}
.title{
    height:35px;
    background-color:#61d66f;
    margin-bottom: 10px;
    text-align: center;
    padding-top: 15px;
    padding-left:-20px;
}
.logo{
    display: inline-block;
    width:100px;
    color:white;
    padding: 4px ;
    margin-top: 5px;
    margin-bottom: 0px;
    line-height: 0;
    text-align: center;
    font-size: x-large;
}
#addInspirationButton{
    display: inline-block;
    width:12%;
    height:30px;
    line-height: 10px;
    text-align: center;
    margin-top: 5px;
    margin-bottom: 20px;
    margin-left: 10%;
    float:none;
}
.sortByWrapper{
    display: inline-block;
    width: 7%;
    margin-left:25%;

    margin-top: 5px;
    max-height: 10px;
    cursor: pointer;
    color: black;

}
.searchBar{
    border-color: rgb(96,214,110);
    border-width: thin;
    display: inline-block;
    width:20%;
    color:#484848;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left:.5%;
    vertical-align: middle;
    position: relative;
    font-size: 1em;
}
#signInButton{
    height:30px;
    line-height: 10px;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 20px;

    display: inline-block;
    width:10%;
    padding: 5px ;
    float:right;
    margin-right:20px;
}
.signinButton:hover{
    background-color: #ffffff;
    cursor: pointer;
    box-shadow: #484848 5px 5px;
}

@media(min-width: 1350px) {
    
.nav{
    position:relative;
    width:100%;
    height:50px;
    background-color: #484848;
    font-size: 19px;
}
}
@media(max-width: 1350px){
    
.nav{
    position:relative;
    width:100%;
    height:50px;
    background-color: #484848;
}
    }


.navButton{
    display: inline-block;
    text-align:center;
    line-height:50px;
    width:24.7%;
    height:50px;

    color:#eeeeee;
    /*vertical-align: middle;*/
}
.navButton:hover{
    background-color: lightgray;
    color:#484848;
    cursor: pointer;
    border-radius: 10px 10px 0px 0px;
}
.navButtonActive{
    background-color: lightgray;
    color:#484848;
    border-radius: 10px 10px 0px 0px;
}
.nextButton{
    display: inline-block;
    height:50px;
    width: 25px;
    background-color: #61d66f;
    vertical-align: middle;
    margin-left:4%;
    color:#ffffff;

}
.nextButton:hover{
    background-color: #d6322f;
}
a.divLink {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    text-decoration: none;
    /* Makes sure the link doesn't get underlined */
    /*z-index: 10;*/
    /* raises anchor tag above everything else in div */
    /*workaround to make clickable in IE */
    /*opacity: 0;*/
    /*workaround to make clickable in IE */
    /*filter: alpha(opacity=0);*/
    /*workaround to make clickable in IE */
}
.content{
    width:100%;
    height:100%;
    display: inline-block;
}
.mainView{
    height:300px;
    width:500px;
    line-height: 300px;
    text-align: center;
    margin:0 auto;
    margin-top: 20px;
    padding: 0px;
    position: relative;
    background-color: #f8fdff;
    font-size: xx-large;
    color: #484848;
}

#loginContainer{
    padding-top:5%;
    margin:auto;
    width:300px;
}

.emailInput{
    display: block;
    width:100%;
    color:black;
    margin-top: 5px;
    margin-bottom: 5px;
    position: relative;
    font-size: 1em;
}
.passwordInput{
    display: block;
    width:100%;
    color:black;
    margin-top: 5px;
    margin-bottom: 5px;
    position: relative;
    font-size: 1em;
}
.facebookButton{
    float:right;
    margin-left:15px;
    display: inline-block;
}
.loginButton{
    display: inline-block;
    float:right;
    margin-left:15px;
}
.signupContainer{
    margin-top: 10%;
}
.triangleDown:hover{
    cursor: pointer;
}

.aComment{

    border-style: solid;
    border-width: 1px;
    border-color: rgb(175,235,182);
    border-left-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    padding-top: 1px;
    padding-bottom: 1px;
    background-color: white;
}
.pictureView{
    width:47%;
    /*height:390px;
    width:650px;*/
    margin:0px;
    margin-top: -10px;
    margin-left: 5%;
    padding: 10px;
    position: relative;
    float: left;
    left: 50px;
}

.comments{
    height:315px;
    width:30%;
    /*height:315px;
    width:750px;*/
    margin-left: 77px;
    padding: 10px;
    position: relative;
    float: left;
    overflow-y: scroll;
    background-color: white;
}
.addComment{
    height:32px;
    width:100%;
    padding: 10px;
    margin-top: 10px;
    margin-bottom: 5px;
    position: relative;
    float: left;
}
input.submitbutton {
    float:right; 
    margin-right:-22px;
    background: #484848;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    text-shadow: 1px 1px 3px #666666;
    -webkit-box-shadow: 3px 3px 5px #666666;
    -moz-box-shadow: 3px 3px 5px #666666;
    box-shadow: 3px 3px 5px #666666;
    font-family: Arial;
    color: #ffffff;
    font-size: 18px;
    padding: 10px 20px 10px 20px;
    text-decoration: none;
    outline: none;
}

input.submitbutton:hover {
    background: #666666;
    text-decoration: none;
    cursor: pointer;
}
input.submitbutton:active {
    position: relative;
    top: 2px;
    left: 2px;  
    -webkit-box-shadow: 0px 0px 0px #666666;
    -moz-box-shadow: 0px 0px 0px #666666;
    box-shadow: 0px 0px 0px #666666;
}

input.privateCheckbox{
    width: 20px; 
    height: 20px;
    float: left;
    position: relative;
    background-color: white;
}
div.submitContainer{
    width: 30%;
    padding-top: 5px;
    float: left; 

}
/*id for sign up button*/
#signUpButton
{
    margin: auto;
    float: none;
    margin-bottom: 2%;
    display: block;
}

/*DANTLeY"S STUFF*/
.picture/*this is for the class of the pictures*/
{
    width: 13%;
    height:130px;
    padding: .4%;
}
.picture:hover{
    cursor: pointer;
}
#ImageLine /*this is just for the div in which the picture reside*/
{
    width: 100%;
}
#scrollImageLeft /*scrollImage is for the arrow buttons sorry it is a bad name*/
{
    display: inline-block;
    margin-top: 20px;
    margin-right: 2%;
    float: left;
    height: 110px;

}
#scrollImageRight /*scrollImage is for the arrow buttons sorry it is a bad name*/
{
    display: inline-block;
    margin-top: 20px;
    float: right;
    height: 110px;

    margin-right:1.25%;

}

/*Custom selector box for sort by */
.label {
    display: inline-block;
    cursor: pointer;
    color: #484848;
}
#sortBySelect select{
    border: none;
    color: #eee;
    background: transparent;
    font-size: 20px;
    font-weight: bold;
    padding: 2px 10px;
    width:125%;
    *background: #484848;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}
#sortBySelect{
    overflow:hidden;
    width:115px;
    color:#eeeeee;
    -moz-border-radius: 9px;
    -webkit-border-radius: 9px;
    border-radius: 9px;
    background: #484848;
    /*background: #484848 url('../Resources/TinyArrow.jpg')no-repeat scroll 80px center;*/
}
#sortBySelect:hover{
    box-shadow:1px 1px 5px #f4f4f4;
    cursor: pointer;
}


.uploadPreview{
    width:36%;
    padding: 10px;
    margin: -10px 10% 0px 10%;
    float: left;
}
.textupload{
    height:0px;
    width:100%;
    /*height:315px;
    width:750px;*/
    margin-top: 25px;
    padding: 50px;
    float: left;
    background-color: white;
}
input.visibilityCheckbox{
    width: 20px; 
    height: 20px;
    background-color: white;
    vertical-align: middle;
}
img{
    border-width: 0px;
}
input.browse{
    margin-top: 19%;    
}
.welcome{
    background-color: #ffffff;
    font-size: large;
    display: inline-block;
    margin:auto;
    width: 500px;
    height:500px;
    line-height: 500px;
    text-align: center;
}

